--- a/style.css
+++ b/style.css
@@ -1,53 +1,54 @@
 body {
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
-}
-
-h1 {
-	/* position: absolute; */
-	font-family: courier;
-	font-size: 17px;
-	line-height: 10px;
-	text-align: center;
-	bottom: 20px;
-
-}
-
-img {
-	display: block;
-	margin: auto;
-	width: 65px;
-	height: 65px;
+	overflow: auto;
 }
 
 #banner {
-	position: relative;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	width: 100%;
 	background-color: #00979F;
 	max-width: none;
-	height: 130px;
+	height: 100px;
 }
 
 #logo {
-	position: absolute;
+	position: relative;
 	display: block;
-	padding: 15px;
-	width: 90;
-	height: 90px;
+	padding: 5px;
+	width: 80px;
+	height: 80px;
 	top: 5px;
 	left: 5px;
 	color: white;
 	cursor: pointer;
 }
 
+#logo_txt {
+	position: relative;
+	text-align: center;
+	font-family: courier;
+	font-size: 14px;
+	line-height: 20px;
+}
+
+#logo_img {
+	display: block;
+	margin: auto;
+	width: 60px;
+	height: 60px;
+}
+
 #menu {
-	position: absolute;
-	max-width: none;
+	position: relative;
+	display: inline-block;
 	height: 40px;
 	padding: 10px;
-	bottom: 0;
+	bottom: 50px;
 	left: 50%;
-	margin-left: -131.5px;
+	margin-left: -131.5px;	 /*half of the menu div which doesn't change but does w/ font-size */
 }
 
 .nav_button {
@@ -57,16 +58,56 @@ img {
 	text-align: center;
 	line-height: 40px;
 	color: white;
-	font-family: courier; /* sans-sarif; */
+	font-family: courier;
 	font-size: 20px;
 	margin-top: -3px;
 	padding: 3px;
 	cursor: pointer;
 }
 
-a {
-	font-family: courier;
-	font-size: 24px;
-	color: white;
-	text-align: center;
+#main {
+	position: relative;
+	margin-top: 100px;
+	padding-top: 10px;
+	width: 100%;
 }
+
+h1 {
+	margin: 0;
+	padding: 12px;
+	text-align: center;
+	font-size: 45px;
+	font-family: courier;
+}
+
+#main_container {
+	width: 60%;
+	margin: 0 auto;
+}
+
+p {
+	margin: 0;
+	padding: 6px;
+	font-size: 16px;
+	font-family: courier;
+}
+
+#wispa_img {
+	display: block;
+	margin: 0 auto;
+	width: 720;
+}
+
+
+#footer {
+	bottom: 0;
+	width: 100%;
+	background-color: #00979F;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	text-align: center;
+	font-size: 12px;
+	font-family: lucida console;
+}
+
+/* div {border: 3px solid pink} */
