--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
 		
 		<div id="menu">
 			<div class="nav_button" href="http://joeiddon.me">HOME</div>
-			<div class="nav_button" href="http://google.com">PROJECTS</div>			
-			<div class="nav_button" href="http://google.com">ABOUT</div>
+			<div class="nav_button" href="http://joeiddon.me/projects">PROJECTS</div>			
+			<div class="nav_button" href="http://joeiddon.me/about.html">ABOUT</div>
 		</div>
 		
 		<div id="logos_container">
