--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 		<div id="menu">
 			<div class="nav_button" href="http://joeiddon.me">HOME</div>
 			<div class="nav_button" href="http://joeiddon.me/projects">PROJECTS</div>			
-			<div class="nav_button" href="http://joeiddon.me/about.html">ABOUT</div>
+			<div class="nav_button" href="http://joeiddon.me/about">ABOUT</div>
 		</div>
 		
 		<div id="logos_container">
