--- a/style.css
+++ b/style.css
@@ -101,8 +101,8 @@ h1 {
 }
 
 a {
-	font-family: courer;
-	font-size: 16px;
+	font-family: inherit;
+	font-size: inherit;
 	text-decoration: none;
 }
 
