--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,8 @@
 			<div class="nav_button" href="http://joeiddon.me">HOME</div>
 			<div id="projects" class="nav_button" href="http://joeiddon.me/projects">PROJECTS</div>
 			<div id="dropdown">
-				<div class="nav_dropdown" href="http://joeiddon.me">project1</div>
-				<div class="nav_dropdown" href="http://joeiddon.me">project2</div>
-				<div class="nav_dropdown" href="http://joeiddon.me">project3</div>			
+				<div class="nav_dropdown" href="http://joeiddon.me/projects/arduino">ARDUINO</div>
+				<div class="nav_dropdown" href="http://joeiddon.me/projects/javascript">JAVASCRIPT</div>
 			</div>
 			<div class="nav_button" href="http://joeiddon.me/about">ABOUT</div>
 		</div>
