--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="http://joeiddon.me/style.css">
 	
 	<title>Joe Iddon</title>
 	<link rel="icon" href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_teal.png"></link>
@@ -50,7 +50,7 @@
 	
 </body>
 
-<script src="../script.js"></script>
+<script src="http://joeiddon.me/script.js"></script>
 <html>
 
 </html>
