--- a/style.css
+++ b/style.css
@@ -161,6 +161,18 @@ img {
 	width: 90%;
 }
 
+td {
+	padding: 50px;	
+}
+
+
+.project_img {
+	width: 100%;
+	display: block;
+	margin: 0 auto;
+	box-shadow: 0 0 60px black;
+}
+
 
 #footer {
 	bottom: 0;
