--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
 #main {
 	position: relative;
 	margin-top: 100px;
-	padding-top: 10px;
+	padding: 10px 0px 10px 0px;
 	width: 100%;
 }
 
