--- a/style.css
+++ b/style.css
@@ -178,10 +178,9 @@ td {
 }
 
 canvas {
-	border: 3px solid;
-    display: block;
-    margin: 10px auto 10px auto;
-    background-color: white;
+	border: 0;
+	margin: 6px;
+	background-color: black;
 }
 
 #footer {
