added img style tag, may need reverting

--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ body {
 	font-family: lucida console;
 }
 
+img {
+	margin: 0 auto;
+	width: 100%;
+}
+
+
 #logo {
 	position: relative;
 	display: block;
