--- a/style.css
+++ b/style.css
@@ -157,6 +157,14 @@ h1 {
 	font-size: 45px;
 }
 
+table {
+	border-collapse: collapse;
+}
+
+td {
+	border: 1px solid black;
+	padding: 8px;
+}
 
 a {
 	font-family: inherit;
