removed 'view source' link from footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 		Copyright &copy 2017, 
 		<a href="http://joeiddon.me">Joe Iddon</a>. 
 		Design by moi (no animals harmed in the making...)
-		<a href="http://github.com/roadkillcat/roadkillcat.github.io">view source</a>
+		<!-- <a href="http://github.com/roadkillcat/roadkillcat.github.io">view source</a> -->
 	</div>
 	
 	</div>
