--- a/style.css
+++ b/style.css
@@ -190,10 +190,13 @@ pre {
 td {
 	padding: 25px;
 	width: 590px;
+	height: 330px;
 }
 
 .project_img {
-	width: 100%;
+	width: auto;
+	max-width: 100%;
+	max-height: 100%;
 	display: block;
 	margin: 0 auto;
 	box-shadow: 0 0 60px black;
