--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 		<div id="menu">
 			<div class="nav_button" href="http://joeiddon.me">HOME</div>
 			<div id="projects" class="nav_button" href="http://joeiddon.me/projects">PROJECTS</div>
+			<div class="nav_button" href="http://joeiddon.me/club">CLUB</div>
 			<div id="dropdown">
 				<div class="nav_dropdown" href="http://joeiddon.me/projects/arduino">ARDUINO</div>
 				<div class="nav_dropdown" href="http://joeiddon.me/projects/javascript">JAVASCRIPT</div>
