--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 	  
 	<div id="footer">
 		Copyright &copy 2017, 
-		<a href="http://joeiddon.me">Joe Iddon</a>. 
+		<a href="http://joeiddon.me/about">Joe Iddon</a>. 
 		Design by moi (no animals harmed in the making...)
 		<!-- <a href="http://github.com/roadkillcat/roadkillcat.github.io">view source</a> -->
 	</div>
