--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,55 +1,55 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="http://joeiddon.me/style.css">
-	
-	<title>Joe Iddon</title>
-	<link rel="icon" href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_teal.png"></link>
+<link rel="stylesheet" href="http://joeiddon.me/style.css">
+
+<title>Joe Iddon</title>
+<link rel="icon" href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_teal.png"></link>
 </head>
 
 <body>
-	<div id="banner">
-		<div id="logo" href="http://joeiddon.me">
-			<img id="logo_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_white.png"></img>
-			<div id="logo_txt">JOE IDDON</div>
-		</div>
-		
-		<div id="menu">
-			<div class="nav_button" href="http://joeiddon.me">HOME</div>
-			<div id="projects" class="nav_button" href="http://joeiddon.me/projects">PROJECTS</div>
-			<div class="nav_button" href="http://joeiddon.me/club">CLUB</div>
-			<div id="dropdown">
-				<div class="nav_dropdown" href="http://joeiddon.me/projects/arduino">ARDUINO</div>
-				<div class="nav_dropdown" href="http://joeiddon.me/projects/javascript">JAVASCRIPT</div>
-			</div>
-			<div class="nav_button" href="http://joeiddon.me/about">ABOUT</div>
-		</div>
-		
-		<div id="logos_container">
-			<img class="logo_link" href="https://stackoverflow.com/u/7434365/" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/stack_logo.png"></img>
-			<img class="logo_link" href="http://github.com/roadkillcat" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/github_logo.png"></img>
-			<img class="logo_link" href="http://thingiverse.com/prusai3d" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/thingiverse_logo.png"></img>
-		</div>
-		
-	</div>
+<div id="banner">
+<div id="logo" href="http://joeiddon.me">
+<img id="logo_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_white.png"></img>
+<div id="logo_txt">JOE IDDON</div>
+</div>
 
-	<div id="main">
+<div id="menu">
+<div class="nav_button" href="http://joeiddon.me">HOME</div>
+<div id="projects" class="nav_button" href="http://joeiddon.me/projects">PROJECTS</div>
+<div class="nav_button" href="http://joeiddon.me/club">CLUB</div>
+<div id="dropdown">
+<div class="nav_dropdown" href="http://joeiddon.me/projects/arduino">ARDUINO</div>
+<div class="nav_dropdown" href="http://joeiddon.me/projects/javascript">JAVASCRIPT</div>
+</div>
+<div class="nav_button" href="http://joeiddon.me/about">ABOUT</div>
+</div>
 
-		<div id="main_container">
-		
-			{{content}}
-		 
-		</div>
-	  
-	<div id="footer">
-		Copyright &copy 2017, 
-		<a href="http://joeiddon.me/about">Joe Iddon</a>. 
-		Design by moi (no animals harmed in the making...)
-		<!-- <a href="http://github.com/roadkillcat/roadkillcat.github.io">view source</a> -->
-	</div>
-	
-	</div>
-	
+<div id="logos_container">
+<img class="logo_link" href="https://stackoverflow.com/u/7434365/" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/stack_logo.png"></img>
+<img class="logo_link" href="http://github.com/roadkillcat" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/github_logo.png"></img>
+<!--<img class="logo_link" href="http://thingiversie.com/prusai3d" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/thingiverse_logo.png"></img>-->
+</div>
+
+</div>
+
+<div id="main">
+
+<div id="main_container">
+
+{{content}}
+
+</div>
+
+<div id="footer">
+Copyright &copy 2017, 
+<a href="http://joeiddon.me/about">Joe Iddon</a>. 
+Design by moi (no animals harmed in the making)
+<!-- <a href="http://github.com/roadkillcat/roadkillcat.github.io">view source</a> -->
+</div>
+
+</div>
+
 </body>
 
 <script src="http://joeiddon.me/script.js"></script>
