forgot to change link to tetraFin.png

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 <div id="banner">
 
 <div id="logo" href="/">
-<img id="logo_img" src="/images/logo_white.png"></img>
+<img id="logo_img" src="/images/tetraFin.png"></img>
 <div id="logo_txt">JOE IDDON</div>
 </div>
 
