--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 	padding: 5px 0 3px 0;
 	text-align: center;
 	font-size: 12px;
-	font-family: lucida console;
+	font-family: monospace;
 }
 
 
@@ -66,7 +66,7 @@ body {
 #logo_txt {
 	position: relative;
 	text-align: center;
-	font-family: courier;
+	font-family: monospace;
 	font-size: 14px;
 	line-height: 20px;
 }
@@ -119,7 +119,7 @@ body {
 	text-align: center;
 	line-height: 40px;
 	color: white;
-	font-family: courier;
+	font-family: monospace;
 	font-size: 15px;
 	margin: 0px 2px 0px 2px;
 	padding: 0px 6px 0px 6px;
