added back title which accidently removed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+<title>Joe Iddon</title>
 <link rel="icon" href="/images/tetraIcon.png"></link>
 <link rel="stylesheet" href="http://joeiddon.me/style.css">
 </head>
