2/2 changed all hrefs to (<a>)s

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,32 +9,31 @@
 <body>
 <div id="banner">
 
-<div id="logo" href="/">
+<a href="/"><div id="logo">
 <img id="logo_img" src="/images/tetraFin.png"></img>
 <div id="logo_txt">JOE IDDON</div>
-</div>
+</div></a>
 
 <div id="menu">
-<div class="nav_button" href="/">HOME</div>
-<div id="projects" class="nav_button" href="/projects">PROJECTS</div>
-<div class="nav_button" href="/club">CLUB</div>
+<a href="/"><div class="nav_button">HOME</div></a>
+<a href="/projects"><div id="projects" class="nav_button">PROJECTS</div></a>
+<a href="/club"><div class="nav_button">CLUB</div></a>
 <div id="dropdown">
-<div class="nav_dropdown" href="/projects/arduino">ARDUINO</div>
-<div class="nav_dropdown" href="/projects/javascript">JAVASCRIPT</div>
+<a href="/projects/arduino"><div class="nav_dropdown">ARDUINO</div></a>
+<a href="/projects/javascript"><div class="nav_dropdown">JAVASCRIPT</div></a>
 </div>
-<div class="nav_button" href="/about">ABOUT</div>
+<a href="/about"><div class="nav_button">ABOUT</div></a>
 </div>
 
 <div id="logos_container">
-<img class="logo_link" href="https://stackoverflow.com/u/7434365/" src="/images/stack_logo.png"></img>
-<img class="logo_link" href="http://github.com/roadkillcat" src="/images/github_logo.png"></img>
+<a href="https://stackoverflow.com/u/7434365/"><img class="logo_link" src="/images/stack_logo.png"></img></a>
+<a href="http://github.com/roadkillcat"><img class="logo_link" src="/images/github_logo.png"></img></a>
 <!--<img class="logo_link" href="http://thingiversie.com/prusai3d" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/thingiverse_logo.png"></img>-->
 </div>
 
 </div>
 
 <div id="main">
-
 <div id="main_container">
 
 {{content}}
@@ -47,9 +46,7 @@ Copyright &copy 2017,
 Design by moi (no animals harmed in the making)
 <!-- <a href="http://github.com/roadkillcat/roadkillcat.github.io">view source</a> -->
 </div>
-
 </div>
-
 </body>
 
 <script src="/script.js"></script>
