--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ body {
 	top: 5px;
 	left: 5px;
 	color: white;
-	cursor: pointer;
 }
 
 #logo:hover, .logo_link:hover, .nav_button:hover, .nav_dropdown:hover{
@@ -102,7 +101,6 @@ body {
 	font-size: 20px;
 	margin: 0px 2px 0px 2px;
 	padding: 0px 6px 0px 6px;
-	cursor: pointer;
 }
 
 #dropdown {
@@ -119,11 +117,10 @@ body {
 	text-align: center;
 	line-height: 34px;
 	color: white;
-	font-family: monospace;
+	font-family: courier;
 	font-size: 15px;
 	margin: 0px 2px 0px 2px;
 	padding: 0px 6px 0px 6px;
-	cursor: pointer;
 }
 
 .nav_dropdown:hover {
