remove link underlines

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,20 +9,20 @@
 <body>
 <div id="banner">
 
-<a href="/"><div id="logo">
+<a href="/" class="no_underline"><div id="logo">
 <img id="logo_img" src="/images/tetraFin.png"></img>
 <div id="logo_txt">JOE IDDON</div>
 </div></a>
 
 <div id="menu">
-<a href="/"><div class="nav_button">HOME</div></a>
-<a href="/projects"><div id="projects" class="nav_button">PROJECTS</div></a>
+<a href="/" class="no_underline"><div class="nav_button">HOME</div></a>
+<a href="/projects" class="no_underline"><div id="projects" class="nav_button">PROJECTS</div></a>
 <div id="dropdown">
-<a href="/projects/arduino"><div class="nav_dropdown">ARDUINO</div></a>
-<a href="/projects/javascript"><div class="nav_dropdown">JAVASCRIPT</div></a>
+<a href="/projects/arduino" class="no_underline"><div class="nav_dropdown">ARDUINO</div></a>
+<a href="/projects/javascript" class="no_underline"><div class="nav_dropdown">JAVASCRIPT</div></a>
 </div>
-<a href="/club"><div class="nav_button">CLUB</div></a>
-<a href="/about"><div class="nav_button">ABOUT</div></a>
+<a href="/club" class="no_underline"><div class="nav_button">CLUB</div></a>
+<a href="/about" class="no_underline"><div class="nav_button">ABOUT</div></a>
 </div>
 
 <div id="logos_container">
