--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,52 +2,65 @@
 
 <head>
 <title>Joe Iddon</title>
-<link rel="icon" href="/images/tetraIcon.png"></link>
-<link rel="stylesheet" href="http://joeiddon.me/style.css">
+<link rel='icon' href='/images/tetraIcon.png'></link>
+<link rel='stylesheet' href='http://joeiddon.me/style.css'>
 </head>
 
 <body>
-<div id="banner">
+<div id='banner'>
 
-<a href="/" class="no_underline"><div id="logo">
-<img id="logo_img" src="/images/tetraFin.png"></img>
-<div id="logo_txt">JOE IDDON</div>
-</div></a>
-
-<div id="menu">
-<a href="/" class="no_underline"><div class="nav_button">HOME</div></a>
-<a href="/projects" class="no_underline"><div id="projects" class="nav_button">PROJECTS</div></a>
-<div id="dropdown">
-<a href="/projects/arduino" class="no_underline"><div class="nav_dropdown">ARDUINO</div></a>
-<a href="/projects/javascript" class="no_underline"><div class="nav_dropdown">JAVASCRIPT</div></a>
+<a href='/' class='no_underline'>
+<div id='logo'>
+<img id='logo_img' src='/images/tetraFin.png'></img>
+<div id='logo_txt'>JOE IDDON</div>
 </div>
-<a href="/club" class="no_underline"><div class="nav_button">CLUB</div></a>
-<a href="/about" class="no_underline"><div class="nav_button">ABOUT</div></a>
+</a>
+
+<div id='menu'>
+<a href='/' class='no_underline'>
+<div class='nav_button'>HOME</div>
+</a>
+<a href='/projects' class='no_underline'>
+<div id='projects' class='nav_button'>PROJECTS</div>
+</a>
+<div id='dropdown'>
+<a href='/projects/arduino' class='no_underline'>
+<div class='nav_dropdown'>ARDUINO</div>
+</a>
+<a href='/projects/javascript' class='no_underline'>
+<div class='nav_dropdown'>JAVASCRIPT</div>
+</a>
+</div>
+<a href='/club' class='no_underline'>
+<div class='nav_button'>CLUB</div>
+</a>
+<a href='/about' class='no_underline'>
+<div class='nav_button'>ABOUT</div>
+</a>
 </div>
 
-<div id="logos_container">
-<a href="https://stackoverflow.com/u/7434365/"><img class="logo_link" src="/images/stack_logo.png"></img></a>
-<a href="http://github.com/roadkillcat"><img class="logo_link" src="/images/github_logo.png"></img></a>
-<!--<img class="logo_link" href="http://thingiversie.com/prusai3d" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/thingiverse_logo.png"></img>-->
+<div id='logos_container'>
+<a href='https://stackoverflow.com/u/7434365/'><img class='logo_link' src='/images/stack_logo.png'></img></a>
+<a href='http://github.com/roadkillcat'><img class='logo_link' src='/images/github_logo.png'></img></a>
+<!--<img class='logo_link' href='http://thingiversie.com/prusai3d' src='https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/thingiverse_logo.png'></img>-->
 </div>
 
 </div>
 
-<div id="main">
-<div id="main_container">
+<div id='main'>
+<div id='main_container'>
 
 {{content}}
 
 </div>
 
-<div id="footer">
+<div id='footer'>
 Copyright &copy 2017, 
-<a href="/about">Joe Iddon</a>. 
+<a href='/about'>Joe Iddon</a>. 
 Design by moi (no animals harmed in the making)
-<!-- <a href="http://github.com/roadkillcat/roadkillcat.github.io">view source</a> -->
 </div>
 </div>
 </body>
 
-<script src="/script.js"></script>
+<script src='/script.js'></script>
 </html>
