--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 <title>Joe Iddon</title>
 <link rel='icon' href='/images/tetraIcon.png'></link>
-<link rel='stylesheet' href='http://joeiddon.github.io/style.css'>
+<link rel='stylesheet' href='https://joeiddon.github.io/style.css'>
 </head>
 
 <body>
@@ -41,8 +41,8 @@
 
 <div id='logos_container'>
 <a href='https://stackoverflow.com/u/7434365/'><img class='logo_link' src='/images/stack_logo.png'></img></a>
-<a href='http://github.com/joeiddon'><img class='logo_link' src='/images/github_logo.png'></img></a>
-<!--<img class='logo_link' href='http://thingiversie.com/prusai3d' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/thingiverse_logo.png'></img>-->
+<a href='https://github.com/joeiddon'><img class='logo_link' src='/images/github_logo.png'></img></a>
+<!--<img class='logo_link' href='https://thingiversie.com/prusai3d' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/thingiverse_logo.png'></img>-->
 </div>
 
 </div>
