mv js + css -> _layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 <title>Joe Iddon</title>
 <link rel='icon' href='/images/tetraIcon.png'></link>
-<link rel='stylesheet' href='https://joeiddon.github.io/style.css'>
+<link rel='stylesheet' href='style.css'>
 </head>
 
 <body>
@@ -62,5 +62,5 @@ Design by moi (no animals harmed in the making)
 </div>
 </body>
 
-<script src='/script.js'></script>
+<script src='script.js'></script>
 </html>
