--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ body {
     overflow: auto;
 }
 
+#url_message {
+    text-align: centre;
+    margin: auto;
+    max-width: 60%;
+    background-color: #e55;
+    font-family: courier;
+}
+
 #banner {
     position: fixed;
     z-index: 1;
@@ -16,7 +24,7 @@ body {
     background-color: #00979F;
     max-width: none;
     height: 100px;
-    box-shadow: 0 -20px 20px 20px;
+    box-shadow: 0 0 20px 0;
 }
 
 #main {
@@ -36,7 +44,6 @@ body {
 }
 
 #footer {
-    bottom: 0;
     width: 100%;
     background-color: #00979F;
     margin-top: 5px;
@@ -46,9 +53,8 @@ body {
     font-family: monospace;
 }
 
-
 #logo {
-    position: relative;
+    position: absolute;
     display: block;
     padding: 5px;
     width: 80px;
@@ -63,7 +69,6 @@ body {
 }
 
 #logo_txt {
-    position: relative;
     text-align: center;
     font-family: monospace;
     font-size: 14px;
@@ -78,11 +83,10 @@ body {
 }
 
 #menu {
-    position: relative;
-    display: inline-block;
+    position: absolute;
+    bottom: 0;
     height: 40px;
     padding: 10px;
-    bottom: 45px;
     left: 50%;
     transform: translate(-50%, 0);
     font-size: 0;
@@ -129,7 +133,7 @@ body {
 }
 
 #logos_container {
-    position: fixed;
+    position: absolute;
     right: 0;
     top: 0;
     padding: 4px;
