url changed mainly

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 #main_container {
     max-width: 1260;
     margin: 0 auto;
-    font-family: courier
+    font-family: courier;
 }
 
 #footer {
