--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,47 +4,46 @@
   <title>Joe Iddon</title>
   <link rel='icon' href='/images/tetra_icon.png'></link>
   <link rel='stylesheet' href='/style.css'>
+  <link rel='stylesheet' href='default.css'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 
 <body>
-  <div id='message_banner_wrap'>
-    <div id='banner'>
+  <div id='banner'>
+    <a href='/' class='no_underline'>
+      <div id='logo'>
+        <img id='logo_img' src='/images/tetra_logo.png'></img>
+        <div id='logo_txt'>JOE IDDON</div>
+      </div>
+    </a>
+
+    <div id='menu'>
       <a href='/' class='no_underline'>
-        <div id='logo'>
-          <img id='logo_img' src='/images/tetra_logo.png'></img>
-          <div id='logo_txt'>JOE IDDON</div>
-        </div>
+        <div class='nav_button'>HOME</div>
       </a>
-
-      <div id='menu'>
-        <a href='/' class='no_underline'>
-          <div class='nav_button'>HOME</div>
+      <a href='/projects' class='no_underline'>
+        <div id='projects' class='nav_button'>PROJECTS</div>
+      </a>
+      <div id='dropdown'>
+        <a href='/projects/arduino' class='no_underline'>
+          <div class='nav_dropdown'>ARDUINO</div>
         </a>
-        <a href='/projects' class='no_underline'>
-          <div id='projects' class='nav_button'>PROJECTS</div>
-        </a>
-        <div id='dropdown'>
-          <a href='/projects/arduino' class='no_underline'>
-            <div class='nav_dropdown'>ARDUINO</div>
-          </a>
-          <a href='/projects/javascript' class='no_underline'>
-            <div class='nav_dropdown'>JAVASCRIPT</div>
-          </a>
-        </div>
-        <a href='/club' class='no_underline'>
-          <div class='nav_button'>CLUB</div>
-        </a>
-        <a href='/about' class='no_underline'>
-          <div class='nav_button'>ABOUT</div>
+        <a href='/projects/javascript' class='no_underline'>
+          <div class='nav_dropdown'>JAVASCRIPT</div>
         </a>
       </div>
+      <a href='/club' class='no_underline'>
+        <div class='nav_button'>CLUB</div>
+      </a>
+      <a href='/about' class='no_underline'>
+        <div class='nav_button'>ABOUT</div>
+      </a>
+    </div>
 
-      <div id='logos_container'>
-        <a href='https://stackoverflow.com/u/7434365/'><img class='logo_link' src='/images/stack_logo.png'></img></a>
-        <a href='https://github.com/joeiddon'><img class='logo_link' src='/images/github_logo.png'></img></a>
-        <!--<img class='logo_link' href='https://thingiversie.com/prusai3d' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/thingiverse_logo.png'></img>-->
-      </div>
+    <div id='logos_container'>
+      <a href='https://stackoverflow.com/u/7434365/'><img class='logo_link' src='/images/stack_logo.png'></img></a>
+      <a href='https://github.com/joeiddon'><img class='logo_link' src='/images/github_logo.png'></img></a>
+      <!--<img class='logo_link' href='https://thingiversie.com/prusai3d' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/thingiverse_logo.png'></img>-->
     </div>
   </div>
 
