--- a/style.css
+++ b/style.css
@@ -4,183 +4,33 @@ body {
     overflow: auto;
 }
 
-#message_banner_wrap {
-    position: fixed;
-    top: 0;
-    z-index: 1;
-    height: 160px;
-}
-
-#banner {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    width: 100%;
-    background-color: #00979F;
-    height: 100px;
-    box-shadow: 0 0 20px 0;
-}
-
-#main {
-    position: absolute;
-    overflow-y: scroll;
-    top: 100px;
-    height: clc(100vh - 100px);
-    width: 100%;
-    padding: 0;
-}
-
-#main_container {
-    max-width: 1260;
-    margin: 0 auto;
-    font-family: courier;
-}
-
-#footer {
-    width: 100%;
-    background-color: #00979F;
-    margin-top: 5px;
-    padding: 5px 0 3px 0;
-    text-align: center;
-    font-size: 12px;
-    font-family: monospace;
-}
-
-#logo {
-    position: absolute;
-    display: block;
-    padding: 5px;
-    width: 80px;
-    height: 80px;
-    top: 5px;
-    left: 5px;
-    color: white;
-}
-
-#logo:hover, .logo_link:hover, .nav_button:hover, .nav_dropdown:hover{
-    background-color: #20B7BF;
-}
-
-#logo_txt {
-    text-align: center;
-    font-family: monospace;
-    font-size: 14px;
-    line-height: 20px;
-}
-
-#logo_img {
-    display: block;
-    margin: auto;
-    width: 60px;
-    height: 60px;
-}
-
-#menu {
-    position: absolute;
-    bottom: 0;
-    height: 40px;
-    padding: 10px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    font-size: 0;
-}
-
-.nav_button {
-    display: inline-block;
-    height: 100%;
-    text-align: center;
-    line-height: 40px;
-    color: white;
-    font-family: courier;
-    font-size: 20px;
-    margin: 0px 2px 0px 2px;
-    padding: 0px 6px 0px 6px;
-}
-
-#dropdown {
-    display: none;
-    position: absolute;
-    width: 112px;
-    left: 74px;
-    z-index: 1;
-}
-
-.nav_dropdown {
-    height: 100%;
-    background-color: #00979F;
-    text-align: center;
-    line-height: 34px;
-    color: white;
-    font-family: courier;
-    font-size: 15px;
-    margin: 0px 2px 0px 2px;
-    padding: 0px 6px 0px 6px;
-}
-
-.nav_dropdown:hover {
-    display: block;
-}
-
-.no_underline {
-    text-decoration: none;
-}
-
-#logos_container {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 4px;
-}
-
-.logo_link {
-    display: inline-block;
-    padding: 2px;
-    width: 35px;
-    cursor: pointer;
-}
-
 h1 {
-    margin: 0;
-    padding: 12px;
-    text-align: center;
-    font-size: 45px;
+    font-size: 16px;
+    font-family: Helvetica;
 }
 
 img {
     width: 100%;
 }
 
-.small_img {
-    width: 32%;
-    display: block;
-    margin: auto;
-}
-
 .half_img {
-    width: 630px;
+    width: calc(100%/2);
     display: inline-block;
 }
 
 .third_img {
-    width: 420px;
+    width: calc(100%/3);
     display: inline-block;
 }
 
-a {
-    font-family: inherit;
-    font-size: inherit;
-}
-
-ol {
-    list-style-type: tibetan;
-    padding-left: 2em;
+.no_underline {
+    text-decoration: none;
 }
 
 p {
-    margin: 0;
-    padding: 6px;
-    font-size: 16px;
-    font-family: courier;
+    font-size: 18px;
+    /*sans-serif for non-curly*/
+    font-family: serif;
 }
 
 pre {
@@ -188,4 +38,11 @@ pre {
     color: white;
     padding: 10px;
     background-color: #E75757;
+    font-family: monospace;
 }
+
+/* to be continued... (<pre><code>)
+code {
+    font-family: monospace;
+    background-color: #3
+    */
