--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <title>Joe Iddon</title>
   <link rel='icon' href='/images/tetra_icon.png'></link>
   <link rel='stylesheet' href='/style.css'>
-  <link rel='stylesheet' href='default.css'>
+  <link rel='stylesheet' href='./default.css'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 
