--- a/layout.css
+++ b/layout.css
@@ -4,22 +4,23 @@
     top: 0;
     width: 100%;
     background-color: #00979F;
-    height: 100px;
-    box-shadow: 0 0 20px 0;
+    height: 80px;
+    box-shadow: 0 0 16px 0;
+    /*sans-serif for non-curly*/
 }
 
 #main {
     position: absolute;
     overflow-y: scroll;
     top: 100px;
-    height: calc(100vh - 100px);
+    /* (100vh - banner_height) */
+    height: calc(100vh - 80px);
     width: 100%;
 }
 
 #main_container {
     max-width: 1260px;
     margin: 0 auto;
-    font-family: courier;
 }
 
 #footer {
@@ -29,7 +30,6 @@
     padding: 5px 0 3px 0;
     text-align: center;
     font-size: 12px;
-    font-family: monospace;
 }
 
 #logo {
@@ -49,7 +49,7 @@
 
 #logo_txt {
     text-align: center;
-    font-family: monospace;
+    font-family: helvetica;
     font-size: 14px;
     line-height: 20px;
 }
@@ -57,8 +57,8 @@
 #logo_img {
     display: block;
     margin: auto;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
 }
 
 #menu {
@@ -69,6 +69,7 @@
     left: 50%;
     transform: translate(-50%, 0);
     font-size: 0;
+    font-family: helvetica;
 }
 
 .nav_button {
@@ -77,7 +78,6 @@
     text-align: center;
     line-height: 40px;
     color: white;
-    font-family: courier;
     font-size: 20px;
     margin: 0px 2px 0px 2px;
     padding: 0px 6px 0px 6px;
@@ -97,7 +97,6 @@
     text-align: center;
     line-height: 34px;
     color: white;
-    font-family: courier;
     font-size: 15px;
     margin: 0px 2px 0px 2px;
     padding: 0px 6px 0px 6px;
