--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,52 +3,44 @@
 <head>
   <title>Joe Iddon</title>
   <link rel='icon' href='/images/tetra_icon.png'></link>
-  <link rel='stylesheet' href='/style.css'>
-  <link rel='stylesheet' href='/layout.css'>
+  <link rel='stylesheet' href='../style.css'>
+  <link rel='stylesheet' href='../layout.css'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 
 <body>
-  <div id='banner'>
-    <a href='/' class='no_underline'>
-      <div id='logo'>
-        <img id='logo_img' src='/images/tetra_logo.png'></img>
-        <div id='logo_txt'>JOE IDDON</div>
-      </div>
+  <div id='top-bar'>
+    <a href='/' class='no-underline'>
+      <img id='logo' class='color-hover' src='/images/tetra_logo.png'></img>
     </a>
 
     <div id='menu'>
-      <a href='/' class='no_underline'>
-        <div class='nav_button'>HOME</div>
+      <a href='/' class='no-underline'>
+        <div class='nav-but color-hover'>home</div>
       </a>
-      <a href='/projects' class='no_underline'>
-        <div id='projects' class='nav_button'>PROJECTS</div>
+      <a href='/projects/arduino' class='no-underline'>
+        <div class='nav-but color-hover'>arduino</div>
       </a>
-      <div id='dropdown'>
-        <a href='/projects/arduino' class='no_underline'>
-          <div class='nav_dropdown'>ARDUINO</div>
-        </a>
-        <a href='/projects/javascript' class='no_underline'>
-          <div class='nav_dropdown'>JAVASCRIPT</div>
-        </a>
-      </div>
-      <a href='/club' class='no_underline'>
-        <div class='nav_button'>CLUB</div>
+      <a href='/projects/javascript' class='no-underline'>
+        <div class='nav-but color-hover'>javascript</div>
       </a>
-      <a href='/about' class='no_underline'>
-        <div class='nav_button'>ABOUT</div>
+      <a href='/club' class='no-underline'>
+        <div class='nav-but color-hover'>club</div>
+      </a>
+      <a href='/about' class='no-underline'>
+        <div class='nav-but color-hover'>about</div>
       </a>
     </div>
 
-    <div id='logos_container'>
-      <a href='https://stackoverflow.com/u/7434365/'><img class='logo_link' src='/images/stack_logo.png'></img></a>
-      <a href='https://github.com/joeiddon'><img class='logo_link' src='/images/github_logo.png'></img></a>
-      <!--<img class='logo_link' href='https://thingiversie.com/prusai3d' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/thingiverse_logo.png'></img>-->
+    <div id='profiles'>
+      <a href='https://stackoverflow.com/u/7434365/'><img class='profile color-hover' src='/images/stack_logo.png'></img></a>
+      <a href='https://github.com/joeiddon'><img class='profile color-hover' src='/images/github_logo.png'></img></a>
     </div>
   </div>
 
   <div id='main'>
-    <div id='main_container'>
+    <div id='content'>
+      <!-- only use of jekyll :/ -->
       {{content}}
     </div>
     <div id='footer'>Copyright &copy 2017, <a href='/about'>Joe Iddon</a>, (no animals harmed in the making).</div>
