--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/*
+https://www.cssfontstack.com/
+*/
+
 body {
     margin: 0;
     padding: 0;
@@ -32,16 +36,7 @@ p {
     font-size: 18px;
 }
 
-pre {
-    border-radius: 6px;
-    color: white;
-    padding: 10px;
-    background-color: #E75757;
-    font-family: monospace;
+code, pre code {
+    font-family: Lucida Console;
+    background-color: #efefef;
 }
-
-/* to be continued... (<pre><code>)
-code {
-    font-family: monospace;
-    background-color: #3
-    */
