img uris updated

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
     </div>
 
     <div id='profiles'>
-      <a href='https://stackoverflow.com/u/7434365/'><img class='profile color-hover' src='/images/stack_logo.png'></img></a>
-      <a href='https://github.com/joeiddon'><img class='profile color-hover' src='/images/github_logo.png'></img></a>
+      <a href='https://stackoverflow.com/u/7434365/'><img class='profile color-hover' src='/images/profiles/stack.png'></img></a>
+      <a href='https://github.com/joeiddon'><img class='profile color-hover' src='/images/profiles/github.png'></img></a>
     </div>
   </div>
 
