block code now to be formatted with <pre> rather than <pre><code>

--- a/style.css
+++ b/style.css
@@ -36,7 +36,11 @@ p {
     font-size: 16px;
 }
 
-code, pre code {
+code, pre {
     font-family: Lucida Console;
     background-color: #efefef;
+}
+
+video {
+    width: 100%;
 }
