--- a/style.css
+++ b/style.css
@@ -36,7 +36,12 @@ p {
     font-size: 16px;
 }
 
-code, pre code {
-    font-family: Lucida Console;
+code, pre {
+    font-family: monospace;
+    word-wrap: pre-wrap;
     background-color: #efefef;
+}
+
+video {
+    width: 100%;
 }
