lots of minor changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,9 @@
       <a href='/projects/javascript' class='no-underline'>
         <div class='nav-but color-hover'>javascript</div>
       </a>
+      <a href='/other' class='no-underline'>
+        <div class='nav-but color-hover'>other</div>
+      </a>
       <a href='/club' class='no-underline'>
         <div class='nav-but color-hover'>club</div>
       </a>
