--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       <a href='/projects/javascript' class='no-underline'>
         <div class='nav-but color-hover'>javascript</div>
       </a>
-      <a href='/other' class='no-underline'>
+      <a href='/projects/other' class='no-underline'>
         <div class='nav-but color-hover'>other</div>
       </a>
       <a href='/club' class='no-underline'>
