--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,15 @@
     </div>
 
     <div id='profiles'>
-      <a href='http://codeforces.com/submissions/joe_iddon'><img class='profile color-hover' src='/images/profiles/codeforces.png'></img></a>
-      <a href='https://stackoverflow.com/u/7434365/'><img class='profile color-hover' src='/images/profiles/stack.png'></img></a>
-      <a href='https://github.com/joeiddon'><img class='profile color-hover' src='/images/profiles/github.png'></img></a>
+      <a href='http://codeforces.com/submissions/joe_iddon'>
+        <img class='profile color-hover' src='/images/profiles/codeforces.png'></img>
+      </a>
+      <a href='https://stackoverflow.com/u/7434365/'>
+        <img class='profile color-hover' src='/images/profiles/stack.png'></img>
+      </a>
+      <a href='https://github.com/joeiddon'>
+        <img class='profile color-hover' src='/images/profiles/github.png'></img>
+      </a>
     </div>
   </div>
 
@@ -47,7 +53,11 @@
       <!-- only use of jekyll :/ -->
       {{content}}
     </div>
-    <div id='footer'>Copyright &copy 2017, <a href='/about'>Joe Iddon</a>, (no animals harmed in the making).</div>
+    <div id='footer'>
+      Copyright &copy 2017,
+      <a href='/about'>Joe Iddon</a>, (no animals harmed in the making).
+      <a href='/tree'>Site Tree</a>.
+    </div>
   </div>
 </body>
 
