removed underscore between images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,14 +37,11 @@
 
     <div id='profiles'>
       <a href='http://codeforces.com/submissions/joe_iddon'>
-        <img class='profile color-hover' src='/images/profiles/codeforces.png'></img>
-      </a>
+        <img class='profile color-hover' src='/images/profiles/codeforces.png'></img></a>
       <a href='https://stackoverflow.com/u/7434365/'>
-        <img class='profile color-hover' src='/images/profiles/stack.png'></img>
-      </a>
+        <img class='profile color-hover' src='/images/profiles/stack.png'></img></a>
       <a href='https://github.com/joeiddon'>
-        <img class='profile color-hover' src='/images/profiles/github.png'></img>
-      </a>
+        <img class='profile color-hover' src='/images/profiles/github.png'></img></a>
     </div>
   </div>
 
