--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,7 @@
       Copyright &copy 2017,
       <a href='/about'>Joe Iddon</a>, (no animals harmed in the making).
       <a href='/tree'>Site Tree</a>.
+      <a href='https://github.com/joeiddon/joeiddon.github.io'>Source (GitHub)</a>.
     </div>
   </div>
 </body>
