--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
   <link rel='icon' href='/images/tetra_icon.png'></link>
   <link rel='stylesheet' href='/style.css'>
   <link rel='stylesheet' href='/layout.css'>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'></meta>
+  <meta name="google-site-verification" content="F5Cw_DmSMOkpjlNszbrOFAeT8BiwgHYu4jU5MY668OI"></meta>
 </head>
 
 <body>
