--- a/projects/project.css
+++ b/projects/project.css
@@ -1,14 +1,14 @@
 td {
-	padding: 25px;
-	width: 590px;
-	height: 330px;
+    padding: 1vw;
+    width: 50%;
+    height: 25vh;
 }
 
 .project_img {
-	width: auto;
-	max-width: 100%;
-	max-height: 100%;
-	display: block;
-	margin: 0 auto;
-	box-shadow: 0 0 60px black;
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: 0 auto;
+    box-shadow: 0 0 40px black;
 }
