--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,10 +52,10 @@
       {{content}}
     </div>
     <div id='footer'>
-      Copyright &copy 2017,
-      <a href='/about'>Joe Iddon</a>, (no animals harmed in the making).
-      <a href='/tree'>Site Tree</a>.
-      <a href='https://github.com/joeiddon/joeiddon.github.io'>Source (GitHub)</a>.
+      Copyright &copy 2017
+      <a href='/about'>Joe Iddon</a>;
+      <a href='/tree'>Site Tree</a>;
+      <a href='https://github.com/joeiddon/joeiddon.github.io'>Source</a>.
     </div>
   </div>
 </body>
