--- a/projects/project.css
+++ b/projects/project.css
@@ -1,14 +1,11 @@
 td {
-    padding: 1vw;
+    padding: 0.5em;
     width: 50%;
-    height: 25vh;
 }
 
 .project_img {
-    width: auto;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
     display: block;
     margin: 0 auto;
-    box-shadow: 0 0 40px black;
+    box-shadow: 0 0 25 black;
 }
