--- a/projects/project.css
+++ b/projects/project.css
@@ -1,5 +1,5 @@
 td {
-    padding: 0.5em;
+    padding: 2vw; /*in vw so scales well on mobile*/
     width: 50%;
 }
 
@@ -7,5 +7,5 @@ td {
     width: 100%;
     display: block;
     margin: 0 auto;
-    box-shadow: 0 0 25 black;
+    box-shadow: 0 0 25px black;
 }
