--- a/projects/project.css
+++ b/projects/project.css
@@ -1,6 +1,20 @@
+table {
+    font: inherit;
+}
+
+table > a {
+    text-decoration: none;
+    color: black;
+}
+
 td {
     padding: 2vw; /*in vw so scales well on mobile*/
     width: 50%;
+}
+
+td > div {
+    display: flex;
+    justify-content: space-between;
 }
 
 .project_img {
