--- a/style.css
+++ b/style.css
@@ -7,13 +7,23 @@ body {
     padding: 0;
     overflow: auto;
     /*sans-serif for non-curly*/
-    font-family: serif;
+    font-family: sans-serif;
     font-size: 16px;
 }
 
-h1 {
+h1, h2, h3, h4 {
     font-family: helvetica;
+    font-weight: 400;
 }
+
+h1 {
+    font-size: 2.5em;
+    margin-block-end: 0.5em;
+}
+
+h2 { font-size: 2em; }
+h3 { font-size: 1.4em; }
+h4 { font-size: 1em; }
 
 img {
     width: 100%;
@@ -40,8 +50,8 @@ img {
 
 code, pre {
     font-family: monospace;
-    word-wrap: pre-wrap;
     background-color: #efefef;
+    overflow-x: auto;
 }
 
 video {
