--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,22 +17,22 @@
 
     <div id='menu'>
       <a href='/' class='no-underline'>
-        <div class='nav-but color-hover'>home</div>
+        <div class='nav-but color-hover'>Home</div>
       </a>
       <a href='/projects/arduino' class='no-underline'>
-        <div class='nav-but color-hover'>arduino</div>
+        <div class='nav-but color-hover'>Arduino</div>
       </a>
       <a href='/projects/javascript' class='no-underline'>
-        <div class='nav-but color-hover'>javascript</div>
+        <div class='nav-but color-hover'>Javascript</div>
       </a>
       <a href='/projects/other' class='no-underline'>
-        <div class='nav-but color-hover'>other</div>
+        <div class='nav-but color-hover'>Other</div>
       </a>
       <a href='/club' class='no-underline'>
-        <div class='nav-but color-hover'>club</div>
+        <div class='nav-but color-hover'>Club</div>
       </a>
       <a href='/about' class='no-underline'>
-        <div class='nav-but color-hover'>about</div>
+        <div class='nav-but color-hover'>About</div>
       </a>
     </div>
 
@@ -55,9 +55,9 @@
     </div>
     <div id='footer'>
       Copyright &copy 2017
-      <a href='/about'>Joe Iddon</a>;
-      <a href='/tree'>Site Tree</a>;
-      <a href='https://github.com/joeiddon/joeiddon.github.io'>Source</a>.
+      <a href='/about'>Joe Iddon</a> |
+      <a href='/tree'>Site Tree</a> |
+      <a href='https://github.com/joeiddon/joeiddon.github.io'>Source</a>
     </div>
   </div>
 </body>
