--- a/layout.css
+++ b/layout.css
@@ -33,6 +33,12 @@
     text-align: center;
     font-size: 12px;
     color: white;
+    line-height: 3em;
+}
+
+#footer > a {
+    text-decoration: none;
+    color: white;
 }
 
 #logo {
