major(ish) style changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,29 +11,19 @@
 
 <body>
   <div id='top-bar'>
-    <a href='/' class='no-underline'>
-      <img id='logo' class='color-hover' src='/images/tetra_logo.png'></img>
-    </a>
-
     <div id='menu'>
       <a href='/' class='no-underline'>
-        <div class='nav-but color-hover'>Home</div>
-      </a>
+        <div class='nav-but color-hover'>Home</div></a>
       <a href='/projects/arduino' class='no-underline'>
-        <div class='nav-but color-hover'>Arduino</div>
-      </a>
+        <div class='nav-but color-hover'>Arduino</div></a>
       <a href='/projects/javascript' class='no-underline'>
-        <div class='nav-but color-hover'>Javascript</div>
-      </a>
+        <div class='nav-but color-hover'>JavaScript</div></a>
       <a href='/projects/other' class='no-underline'>
-        <div class='nav-but color-hover'>Other</div>
-      </a>
+        <div class='nav-but color-hover'>Other</div></a>
       <a href='/club' class='no-underline'>
-        <div class='nav-but color-hover'>Club</div>
-      </a>
+        <div class='nav-but color-hover'>Club</div></a>
       <a href='/about' class='no-underline'>
-        <div class='nav-but color-hover'>About</div>
-      </a>
+        <div class='nav-but color-hover'>About</div></a>
     </div>
 
     <div id='profiles'>
@@ -42,9 +32,14 @@
         <img class='profile color-hover' src='/images/profiles/codeforces.png'></img></a>
       -->
       <a href='https://stackoverflow.com/u/7434365/'>
-        <img class='profile color-hover' src='/images/profiles/stack.png'></img></a>
-      <a href='https://github.com/joeiddon'>
-        <img class='profile color-hover' src='/images/profiles/github.png'></img></a>
+        <img class='profile color-hover'
+        src='/images/profiles/stack.png'></img>
+        <div>/u/7434365</div>
+      </a>
+      <a href='https://github.com/joeiddon' class='no-underline'>
+        <img class='profile color-hover' src='/images/profiles/github.png'></img>
+        <div>/joeiddon</div>
+      </a>
     </div>
   </div>
 
