--- a/layout.css
+++ b/layout.css
@@ -1,23 +1,15 @@
 #top-bar {
-    position: fixed;
-    top: 0;
-    z-index: 1;
     width: 100%;
-    height: 48px;
+    /*height: 48px;*/
     /*menu is inline-block so
     it will get centered*/
     text-align: center;
-    background-color: #00979f;
-    box-shadow: 0 0 16px 0;
+    border-bottom: 1px solid #aaa;
+    color: black;
 }
 
 #main {
-    position: absolute;
-    top: 48px;
-    /* (100vh - banner-height) */
-    height: calc(100vh - 48px);
     width: 100%;
-    overflow-y: scroll;
 }
 
 #content {
@@ -29,16 +21,14 @@
 #footer {
     width: 100%;
     margin-top: 5px;
-    background-color: #00979f;
+    border-top: 1px solid #aaa;
     text-align: center;
     font-size: 12px;
-    color: white;
     line-height: 3em;
 }
 
 #footer > a {
     text-decoration: none;
-    color: white;
 }
 
 #logo {
@@ -50,35 +40,36 @@
 }
 
 .color-hover:hover {
-    background-color: #20b7bf;
 }
 
 #menu {
+    color: inherit;
     display: inline-block;
-    height: 40px;
     margin: 4px;
-    font-size: 0;
+    margin-top: 40px;
     font-family: helvetica;
 }
 
 .nav-but {
+    color: inherit;
     display: inline-block;
-    line-height: 40px;
-    height: 40px;
-    font-size: 16px;
+    font-size: 20px;
     text-align: center;
-    color: white;
-    padding: 0 4px 0 4px;
-    margin: 0 5px 0 5px;
+    margin: 2px 10px;
+    border-radius: 0.3em;
 }
 
 #profiles {
     position: absolute;
-    right: 0;
     top: 0;
+    right: 0;
+}
+
+#profiles > a {
+    display: inline-block;
+    margin: 0px 5px;
 }
 
 .profile {
-    margin: 4px;
     width: 40px;
 }
