--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     /*sans-serif for non-curly*/
     font-family: sans-serif;
     font-size: 16px;
+    line-height: 1.4em;
 }
 
 h1, h2, h3, h4 {
@@ -50,8 +51,18 @@ img {
 
 code, pre {
     font-family: monospace;
-    background-color: #efefef;
+    background-color: #e5e5e5;
+}
+
+code {
+    font-size: 0.8em;
+    padding: 0.3em;
+}
+
+pre {
     overflow-x: auto;
+    font-size: 0.9em;
+    padding: 1em;
 }
 
 video {
